@@ -1,3 +1,8 @@
+2019-11-15  Jan Hubicka  <hubicka@ucw.cz>
+
+	* ipa-inline.c (edge_badness, inline_small_functions): Revert
+	accidental commit.
+
 2019-11-15  Kwok Cheung Yeung  <kcy@codesourcery.com>
 
 	* config/gcn/gcn.h (FIXED_REGISTERS): Unfix frame pointer.
